--- a/main.css
+++ b/main.css
@@ -14,6 +14,17 @@ html, body, .clean-fit {
   font-weight: bold;
   padding:5px 10px;
   font-size:150%;
+  overflow:hidden;
+}
+
+.banner button{
+  float:right;
+  border-radius: 50%;
+  height: 40px;
+  width: 40px;
+  font-weight: bold;
+  border: solid white;
+  background: rgba(0,0,0,0);
 }
 
 #title{
@@ -58,9 +69,6 @@ html, body, .clean-fit {
   color:gray;
   font-style:italic;
 }
-.f12{
-  font-size:80%;
-}
-.f90{
+.f12,.f90{
   font-size:90%;
 }
